posiGen_FullsendBox/src/objects/Ops_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ops Comments</relationshipLabel>
        <relationshipName>Case_Comment_Copies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Ops Comments</relationshipLabel>
        <relationshipName>Ops_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Material Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Truck_Rolls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Truck Rolls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Case_Comment_ID__c</fullName>
        <label>Original Case Comment ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Comment_Copies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Time_Hours__c</fullName>
        <formula>Duration_Hours__c *  Number_of_Truck_Rolls__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truck_Rolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Truck Rolled</label>
        <type>Checkbox</type>
    </fields>
    <label>Ops Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Comment__c</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Duration_Hours__c</columns>
        <columns>Number_of_Truck_Rolls__c</columns>
        <columns>Material_Expense__c</columns>
        <columns>Total_Time_Hours__c</columns>
        <columns>Truck_Rolled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Old_Case_Comments</fullName>
        <columns>Case__c</columns>
        <columns>Comment__c</columns>
        <columns>Truck_Rolled__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>5/13/2014 12:00 AM</value>
        </filters>
        <label>All Old Case Comments</label>
        <sharedTo>
            <group>The_Case_Comments_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_with_Truck_Rolls</fullName>
        <columns>Case__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Comment__c</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Duration_Hours__c</columns>
        <columns>Number_of_Truck_Rolls__c</columns>
        <columns>Material_Expense__c</columns>
        <columns>Total_Time_Hours__c</columns>
        <columns>Truck_Rolled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Truck_Rolls__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All with Truck Rolls</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Ops Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ops Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>